[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/tilemaps/Tiles_1.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/entities/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/levels/Lobby.gd" type="Script" id=3]
[ext_resource path="res://assets/guis/StartButton.png" type="Texture" id=4]
[ext_resource path="res://assets/guis/LeaveButton.png" type="Texture" id=5]

[node name="Lobby" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 3
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 22, 0, 0, 23, 0, 0, 65536, 0, 0, 65537, 0, 0, 65558, 0, 0, 65559, 0, 0, 131072, 0, 0, 131073, 0, 0, 131094, 0, 0, 131095, 0, 0, 196608, 0, 0, 196609, 0, 0, 196619, 0, 0, 196620, 0, 0, 196630, 0, 0, 196631, 0, 0, 262144, 0, 0, 262145, 0, 0, 262166, 0, 0, 262167, 0, 0, 327680, 0, 0, 327681, 0, 0, 327702, 0, 0, 327703, 0, 0, 393216, 0, 0, 393217, 0, 0, 393238, 0, 0, 393239, 0, 0, 458752, 0, 0, 458753, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458774, 0, 0, 458775, 0, 0, 524288, 0, 0, 524289, 0, 0, 524310, 0, 0, 524311, 0, 0, 589824, 0, 0, 589825, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589846, 0, 0, 589847, 0, 0, 655360, 0, 0, 655361, 0, 0, 655382, 0, 0, 655383, 0, 0, 720896, 0, 0, 720897, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720918, 0, 0, 720919, 0, 0, 786432, 0, 0, 786433, 0, 0, 786454, 0, 0, 786455, 0, 0, 851968, 0, 0, 851969, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851990, 0, 0, 851991, 0, 0, 917504, 0, 0, 917505, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917526, 0, 0, 917527, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 418.08, 359.879 )

[node name="Camera" type="Camera2D" parent="YSort/Player"]
current = true
limit_left = 0
limit_top = 0
limit_right = 768
limit_bottom = 512
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 15.0
drag_margin_left = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="OtherPlayers" type="YSort" parent="YSort"]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Labels" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
margin_bottom = 24.0
custom_constants/margin_top = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="HUD/Labels"]
margin_top = 15.0
margin_right = 768.0
margin_bottom = 81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Labels/CenterContainer"]
margin_left = 362.0
margin_right = 405.0
margin_bottom = 66.0

[node name="PasscodeLabel" type="Label" parent="HUD/Labels/CenterContainer/VBoxContainer"]
margin_right = 43.0
margin_bottom = 31.0
text = "TESTER
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersLabel" type="Label" parent="HUD/Labels/CenterContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 43.0
margin_bottom = 66.0
text = "TESTER
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostControls" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/HostControls"]
margin_top = 20.0
margin_right = 768.0
margin_bottom = 512.0
custom_constants/separation = 250
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveButton" type="TextureButton" parent="HUD/HostControls/HBoxContainer"]
margin_left = 67.0
margin_right = 259.0
margin_bottom = 492.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="HUD/HostControls/HBoxContainer"]
margin_left = 509.0
margin_right = 701.0
margin_bottom = 492.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
